<!--
  ~ Created by Romain Mathieu => https://github.com/mclouu
  -->

<resources>
    <string name="notifications">Notifications</string>
    <string name="Help">Help</string>
    <string name="about">About</string>

    <string name="NEWS">News</string>
    <string name="EMPTY">Empty</string>
    <string name="TOPSTORIES">TopStories</string>
    <string name="TOPSTORIES2">Top stories</string>
    <string name="MOSTPOPULAR">MostPopular</string>
    <string name="MOSTPOPULAR2">Most popular</string>
    <string name="error_network">Network error</string>
    <string name="search">Search</string>
    <string name="search_query_term">*Search Query term</string>
    <string name="DateBegin">Begin Date</string>
    <string name="DateEnd">Date End</string>
    <string name="search_button">Search</string>

    <string name="search_box1">Arts</string>
    <string name="search_box2">Business</string>
    <string name="search_box3">Culture</string>
    <string name="search_box8">World</string>

    <string name="search_box4">Politics</string>
    <string name="search_box5">Science</string>
    <string name="search_box6">Technology</string>
    <string name="search_box7">Movies</string>

    <string name="button_search">Search</string>
    <string name="switch_text">Enable notifications (once per day)</string>
    <string name="app_name">MyNews</string>
    <string name="category">category</string>
    <string name="error">Check Your Internet Connection</string>
    <string name="Search_title">Search</string>
    <string name="notif">Notifications</string>
    <string name="Error">Error</string>
    <string name="noResults">No search results found, try again</string>
    <string name="obligation">*You must choose at least one category and one keyword</string>
    <string name="categorie">categorie</string>
    <string name="notif_on">Notification enable</string>
    <string name="notif_off">Notification disable</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="msg_categorie_is_not_checked">You have not chosen any keywords or categories.</string>
</resources>
