<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--android:icon="@drawable/equipements"-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/top_stories"
            android:title="@string/TOPSTORIES" />

        <item
            android:id="@+id/most_popular"
            android:title="@string/MOSTPOPULAR" />
        <item
            android:id="@+id/pets"
            android:title="@string/search_box1" />
        <item
            android:id="@+id/mounts"
            android:title="@string/search_box2" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
